--- a/earthquake-map.html
+++ b/earthquake-map.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-  <h2>My map in an iFrame!</h2>
+  <h1>Earthquakes!</h1>
     
     <!-- Substitute your own CartoDB iFrame code below -->
     <iframe width="100%" height="520" frameborder="0" src="https://darcy19.carto.com/viz/d8a03b6e-94e7-11e6-9233-0e233c30368f/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
